# cumplo-common

./: CLAUDE.md  Makefile  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
cumplo_common/: __init__.py
cumplo_common/database/firestore/: client.py  users.py
cumplo_common/dependencies/: authentication.py  authorization.py
cumplo_common/integrations/: cloud_pubsub.py  cloud_tasks.py  gmail.py
cumplo_common/middlewares/: pubsub.py
cumplo_common/models/: base_model.py  borrower.py  channel.py  credentials.py  credit.py  currency.py  debtor.py  event_private.py  event_public.py  filter_configuration.py  funding_request.py  investment.py  movement.py  notification.py  portfolio.py  session.py  simulation.py  user.py  utils.py
cumplo_common/utils/: cache.py  constants.py  currency.py  text.py
tests/: conftest.py
tests/unit/models/: credentials_test.py
