[tool.poetry]
name = "cumplo-common"
version = "1.12.10"
description = "A one-stop library that centralizes the core logic and protects the domain of the Cumplo API project"
authors = ["Cristobal Sfeir <hello@crisotbalsfeir.com>"]
packages = [{ include = "cumplo_common" }]

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.1.1"
arrow = "^1.2.3"
firebase-admin = "^6.2.0"
babel = "^2.12.1"
python-dotenv = "^1.0.0"
google-cloud-tasks = "^2.14.1"
types-protobuf = "^4.23.0.2"
fastapi = "^0.109.1"
ulid-py = "^1.1.0"
google-cloud-pubsub = "^2.18.4"
cachetools = "^5.5.0"
cryptography = "^44.0.0"
google-api-python-client = "^2.166.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
ruff = "^0.8.0"
basedpyright = ">=1.0"
keyring = "^25.2.1"
keyrings-google-artifactregistry-auth = "^1.1.2"
twine = "^6.1"
docformatter = "^1.7.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 120
target-version = "py313"
preview = true
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",                              # allow typing.Any
  "D107",                                # no docstring required in __init__
  "D212", "D203",                        # docstring-layout style choices
  "D104",                                # no docstring required in public package
  "G004",                                # allow f-strings in logging
  "S113",                                # allow requests without explicit timeout
  "DOC201", "DOC501", "DOC402",          # don't force return/raise/yield docs
  "COM812", "ISC001",                    # defer to the formatter (avoid conflicts)
  "CPY001",                              # no copyright header
  "TRY003", "TRY300", "TRY301",          # relaxed exception-message/flow rules
  "EM101", "EM102",                      # allow literals / f-strings in exceptions
  "RUF012",                              # class vars without ClassVar
  "S101",                                # allow assert
  "BLE001",                              # allow broad except Exception
  "TC006",                               # cast without quotes
  "B904",                                # raise without from
  "RUF005",                              # allow list concat
  "TD002", "TD003", "FIX002", "FIX004",  # allow TODO/HACK comments
  "RET503",                              # allow implicit None return
  "ERA001",                              # allow commented-out code
  "RUF018",                              # assert on walrus
  "PGH003",                              # allow blanket pyright ignores
  "PLW3201",                             # dunder method naming
  "SLF001",                              # access to private attributes
  "FAST002",                             # FastAPI dependency without Annotated (we are FastAPI)
  "B008",                                # function call in defaults, e.g. Depends(...) (FastAPI)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ANN201", "ANN001", "ANN202", "D100", "PLC0415", "PLC2701", "ARG001"]
"tests/**/*_test.py" = ["D101", "D103", "D102", "D205", "FBT001", "PLR2004", "PLR6301", "PT019", "RUF029"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.docformatter]
pre-summary-newline = true
wrap-descriptions = 120
wrap-summaries = 120
recursive = true
blank = true
